fix(about): paddings, gaps. also global max-width, button cursor changed to pointer

--- a/styles/content/about.css
+++ b/styles/content/about.css
@@ -11,8 +11,8 @@
   display: flex;
   justify-content: center;
   background-color: #000;
-  width: 55%;
-  height: 55%;
+  width: 50%;
+  height: 50%;
   border-radius: 50%;
 }
 
@@ -25,7 +25,7 @@
 }
 
 .about__content {
-  padding: 105px 0 0;
+  padding: 95px 0 0;
   display: flex;
   flex-direction: column;
   gap: 100px;
